# s2-cpp

./: README.md
TD1/: CMakeLists.txt
TD1/src/: fraction.cpp  fraction.hpp  main.cpp  utils.cpp  utils.hpp
TD2/: CMakeLists.txt
TD2/src/exo1/: main.cpp
TD2/src/exo2/: function.hpp  recursif.cpp  utils.cpp  utils.hpp
TD2/src/exo3/: comparaison.cpp  function.cpp  selection_sort.cpp  utils.cpp  utils.hpp
TD2/src/exo4/: main.cpp
TD3/: CMakeLists.txt
TD3/src/exo1/: main.cpp
TD3/src/exo2/: main.cpp
TD4/: CMakeLists.txt
TD4/src/: bonus.cpp  exo1.cpp  exo2.cpp  exo3.cpp
TD5/: CMakeLists.txt
TD5/src/: exo1.cpp  exo2.cpp  exo3.cpp
TD6/: CMakeLists.txt
TD6/src/: main.cpp  node.cpp  node.hpp
